application.properties changed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #LOGGING
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
-logging.level.mikolo.springWebApp=DEBUG
+logging.level.mikolo.sklep=DEBUG
