--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #DATA SOURCE & DATABASE
 spring.datasource.url=jdbc:mysql://localhost:3306/sklep
-spring.datasource.username=sdatest
-spring.datasource.password=Start123!
+spring.datasource.username=*******
+spring.datasource.password=*******
 spring.datasource.tomcat.validation-query=SELECT 1
 #
 #HIBERNATE
