--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #DATA SOURCE & DATABASE
 spring.datasource.url=jdbc:mysql://localhost:3306/sklep
-spring.datasource.username=*******
-spring.datasource.password=*******
+spring.datasource.username=sdatest
+spring.datasource.password=Start123!
 spring.datasource.tomcat.validation-query=SELECT 1
-#
+
 #HIBERNATE
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
