--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
 logging.level.mikolo.sklep=DEBUG
+
+management.endpoints.web.exposure.include=mappings, info
